--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2005-02-10  Shawn Betts  <katia_dilkina@verizon.net>
+2005-02-10  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (parse_keydesc): return a cmdret error in the
 	event of an error and take a point to an rp_key as an
@@ -9,17 +9,17 @@
 	(cmdret_new_printf): remove function.
 	(arg_free): free the key member.
 
-2005-02-09  Shawn Betts  <katia_dilkina@verizon.net>
+2005-02-09  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/main.c (main): set the RATPOISON env. variable to the path
 	to this executable.
 
-2005-02-06  Shawn Betts  <katia_dilkina@verizon.net>
+2005-02-06  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (cmd_prompt): allow prompt to be run
 	interactively.
 
-2005-02-04  Shawn Betts  <katia_dilkina@verizon.net>
+2005-02-04  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* configure.in: bump version to 1.4.0-CVS.
 
