(cmdret_new): malloc enough for the cmdret structure.

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,5 +32,5 @@ Joshua Neuheisel <jneuheisel@msn.com>
 Sylvain BEUCLER <beuc@beuc.net>
 Cameron Patrick <cameron@patrick.wattle.id.au>
 Trent Buck <fubarbaz@bigpond.com>
-jesus c. meyendriesch <ratpoison-devel@haareambauch.de>
+jesus c. meyendriesch <jesus@qplay.org>
 Bernhard R. Link <brlink@debian.org>
