--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-10  Shawn  <katia_dilkina@verizon.net>
+
+	* src/actions.c (cmdret_new): malloc enough for the cmdret structure.
+
 2005-04-09  Shawn  <sabetts@monk.lamenet>
 
 	* src/actions.c (init_user_commands): add KEY argument to meta
