* src/messages.h (MESSAGE_RAISE_TRANSIENT_GROUP): new define (MESSAGE_RAISE_WINDOW_GROUP): likewise
* src/group.h (groups_find_group_by_window): new prototype

* src/group.c (groups_find_group_by_window): new function.

* src/events.c (show_rudeness_raise_msg): new function
(map_request): call show_rudeness_raise_msg
(configure_request): likewise

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,7 +20,7 @@ Doug Kearns <djkea2@mugc.its.monash.edu.au>
 Gergely Nagy <algernon@debian.org>
 Henrik Enberg <henrik@enberg.org>
 Jonathan Walther <krooger@debian.org>
-Martin Samuelsson <cosis@lysator.liu.se>
+Martin Samuelsson <rp-contrib@cos.user.lysator.liu.se>
 Mike Meyer <mwm@mired.org>
 Nicklas Lindgren <nili@lysator.liu.se>
 Pasi Kallinen <pkalli@cs.joensuu.fi>
