*** empty log message ***

--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -307,7 +307,7 @@ keystroke.
 @end deffn
 
 @deffn Command {set winname} @var{name}
-@deffnx Command defwinname @var{name}
+@c @deffnx Command defwinname @var{name}
 There are three resources ratpoison can get a window's name from: the
 WMNAME hint, the res_name from the WMCLASS hint, or the res_class from
 the WMCLASS hint. @var{name} can be @samp{title} which is what most
@@ -319,7 +319,7 @@ returned.
 @end deffn
 
 @deffn Command {set wingravity} @var{g}
-@deffnx Command defwingravity @var{g}
+@c @deffnx Command defwingravity @var{g}
 Set the default gravity for normal windows. See the
 @command{gravity} command.
 
@@ -328,13 +328,13 @@ returned.
 @end deffn
 
 @deffn Command {set winliststyle} @var{setting}
-@deffnx Command defwinliststyle @var{setting}
+@c @deffnx Command defwinliststyle @var{setting}
 The window list can be displayed in a row or a column. @var{setting}
 can be @samp{row} or @samp{column}.
 @end deffn
 
 @deffn Command {set winfmt} @var{fmt}
-@deffnx Command defwinfmt @var{fmt}
+@c @deffnx Command defwinfmt @var{fmt}
 Set the default window format for the @command{windows} command. By
 default it is @samp{%n%s%t}. The following is a list of valid format
 characters:
@@ -374,7 +374,7 @@ omitted ratpoison defaults to the current window.
 @end deffn
 
 @deffn Command {set transgravity} @var{g}
-@deffnx Command deftransgravity @var{g}
+@c @deffnx Command deftransgravity @var{g}
 Set the default alignment for transient windows. See the
 @command{gravity} command.
 
@@ -383,7 +383,7 @@ returned.
 @end deffn
 
 @deffn Command {set maxsizegravity} @var{g}
-@deffnx Command defmaxsizegravity @var{g}
+@c @deffnx Command defmaxsizegravity @var{g}
 Set the default alignment for windows with maxsize hints. See the
 @command{gravity} command.
 
@@ -392,7 +392,7 @@ returned.
 @end deffn
 
 @deffn Command {set border} @var{n}
-@deffnx Command defborder @var{n}
+@c @deffnx Command defborder @var{n}
 Set the border width for all windows.
 
 When called non-interactively with no arguments, the current setting is
@@ -683,7 +683,7 @@ The increment size used to resize the frame interactively is
 customized with the command @command{defresizeunit}.
 
 @deffn Command {set resizeunit} @var{pixels}
-@deffnx Command defresizeunit @var{pixels}
+@c @deffnx Command defresizeunit @var{pixels}
 Set the number of pixels a frame will grow or shrink by when being
 dynamically resized.
 @end deffn
@@ -1173,7 +1173,7 @@ Display @var{text} as a message.
 @end deffn
 
 @deffn Command {set inputwidth} @var{n}
-@deffnx Command definputwidth @var{n}
+@c @deffnx Command definputwidth @var{n}
 Set the width of the input window.
 
 When called non-interactively with no arguments, the current setting is
@@ -1181,24 +1181,24 @@ returned.
 @end deffn
 
 @deffn Command {set font} @var{font}
-@deffnx Command deffont @var{font}
+@c @deffnx Command deffont @var{font}
 Set the font. @var{font} is a font string like @samp{9x15bold}.
 @end deffn
 
 @deffn Command {set fgcolor} @var{color}
-@deffnx Command deffgcolor @var{color}
+@c @deffnx Command deffgcolor @var{color}
 Set the foreground color for all text ratpoison displays. @var{color}
 is any valid X11 color.
 @end deffn
 
 @deffn Command {set bgcolor} @var{color}
-@deffnx Command defbgcolor @var{color}
+@c @deffnx Command defbgcolor @var{color}
 Set the background color for all text ratpoison displays. @var{color}
 is any valid X11 color.
 @end deffn
 
 @deffn Command {set barpadding} @var{x} @var{y}
-@deffnx Command defbarpadding @var{x} @var{y}
+@c @deffnx Command defbarpadding @var{x} @var{y}
 Set the horizontal and vertical padding inside the bar.
 
 When called non-interactively with no arguments, the current setting is
@@ -1206,7 +1206,7 @@ returned.
 @end deffn
 
 @deffn Command {set bargravity} @var{g}
-@deffnx Command defbargravity @var{g}
+@c @deffnx Command defbargravity @var{g}
 Set the default alignment for the message bar. See the @command{gravity} command.
 
 When called non-interactively with no arguments, the current setting is
@@ -1215,7 +1215,7 @@ returned.
 
 
 @deffn Command {set barborder} @var{n}
-@deffnx Command defbarborder @var{n}
+@c @deffnx Command defbarborder @var{n}
 Set the border width for the bar window.
 @end deffn
 
@@ -1294,14 +1294,14 @@ Run a ratpoison command.
 @end deffn
 
 @deffn Command {set padding} @var{left} @var{top} @var{right} @var{bottom}
-@deffnx Command defpadding @var{left} @var{top} @var{right} @var{bottom}
+@c @deffnx Command defpadding @var{left} @var{top} @var{right} @var{bottom}
 Set the padding around the edge of the screen.
 
 When called with no arguments, the current setting is returned.
 @end deffn
 
 @deffn Command {set waitcursor} @var{n}
-@deffnx Command defwaitcursor @var{n}
+@c @deffnx Command defwaitcursor @var{n}
 Set whether the rat cursor should change into a square when waiting
 for a key. A non-zero number means change the cursor. Zero means don't
 change the cursor.
