--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,11 @@ Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
 
+* Changes since 1.4.0-beta4
+** new compat command
+the old def* aliases are depricated and have been moved to this
+command. Execute it to restore these bindings.
+
 * Changes since 1.4.0-beta2
 ** meta takes a key argument
 This can be used to stuff keys.
