--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-11  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/actions.c (cmd_tmpwm): stop waiting for the child if waitpid
+	produced an error.
+
 2005-04-17  Shawn  <sabetts@vcn.bc.ca>
 
 	* src/actions.h: new prototype compat
