(isdigit): new function (format_window_name): read a length argument and crop window names to that length. (get_window_list): length argument applies to %c and %a.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* src/window.c (isdigit): new function
 	(format_window_name): read a length argument and crop window names to that length.
+	(get_window_list): length argument applies to %c and %a.
 
 	* src/actions.c (cmd_tmpwm): stop waiting for the child if waitpid
 	produced an error.
