--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-23  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* contrib/Makefile.am (pkgdata_DATA): add unrat.c
+	(EXTRA_DIST): likewise
+
 2005-06-13  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* src/editor.c (edit_bindings): add C-h and C-m
