--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-11-05  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* src/manage.h (unhide_all_windows): new prototype
+
+	* src/manage.c (unhide_all_windows): new function.
+
+	* src/events.c (handle_signals): unhide windows before switching to a new wm
+
 2005-10-22  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* src/window.c (get_mouse_position): renamed from
