--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -1181,6 +1181,8 @@ Run when the user switches to another frame. This is also run when the
 user switches to a different screen, since a frame switch also occurs.
 @item switchgroup
 Run when the user switches to a different group.
+@item deletewindow
+Run when a window is deleted.
 @item quit
 Run when ratpoison exits.
 @item restart
